@@ -21,8 +21,12 @@ Changes
 Fixes
 =====
 
+- Fixed a potential NPE when running `SHOW CREATE TABLE` with plain type
+  indices.
+
 - Fixed an issue that would cause queries ordered by a ``STRING`` scalar with 
   possible ``NULL`` values to get stuck.
+
 
 - Fixed an issue that caused nodes to crash with ``OutOfMemoryException`` when
   executing queries with ``ORDER BY`` on large data sets. Instead, the query
